[project]
name = "CodeAgent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.0.4",
    "pygithub>=2.8.1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
